# YTScribe-MKV

./: .gitignore  README.md  main.py  pyproject.toml
ytscribe/: clean.py  cuda_bootstrap.py  download.py  mux.py  srt.py  transcribe.py  translate.py
